--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Cherry Lyn Portfolio</title>
+    <title>My Portfolio</title>
     <link rel="stylesheet" href="css/styles.css" />
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
@@ -106,7 +106,13 @@
         <div class="portfolio-box">
           <div class="portfolio-layer">
             <h4>Coming Soon</h4>
-            <p>I am still looking for projects that i can post here.</p>
+            <p>
+              I am still looking for projects that i can post here. Lorem ipsum
+              dolor sit amet consectetur adipisicing elit. Et cum natus amet.
+              Corporis earum, aspernatur molestiae eaque voluptatem dolorum
+              recusandae nobis aliquid. Distinctio porro sed officia ab odio
+              vitae laboriosam?
+            </p>
             <a href="https://www.facebook.com/cheriper" class="btn-cv">Look</a>
           </div>
           <img src="images/portfolio1.png" alt="" />
@@ -114,12 +120,71 @@
         <div class="portfolio-box">
           <div class="portfolio-layer">
             <h4>Coming Soon</h4>
-            <p>I am still looking for projects that i can post here.</p>
+            <p>
+              I am still looking for projects that i can post here. Lorem ipsum
+              dolor sit amet, consectetur adipisicing elit. Natus, alias.
+              Officiis distinctio recusandae eligendi eaque? Laboriosam iste,
+              nemo quam reiciendis ducimus similique eveniet inventore ipsa
+              dicta maiores consequatur impedit! Eveniet.
+            </p>
             <a href="https://www.facebook.com/cheriper" class="btn-look"
               >Look</a
             >
           </div>
           <img src="images/portfolio2.png" alt="" />
+        </div>
+      </div>
+    </section>
+    <section class="feedback">
+      <h2>Feedback</h2>
+      <div class="feedback-container">
+        <div class="feedback-box">
+          <p class="feedback-message">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi
+            facere ullam neque sit culpa eaque quibusdam voluptatem nisi.
+          </p>
+          <p class="feedback-name">Jaicy Rodriguez</p>
+          <p class="feedback-title">Jaicy Rodriguez</p>
+        </div>
+        <div class="feedback-box">
+          <p class="feedback-message">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi
+            facere ullam neque sit culpa eaque quibusdam voluptatem nisi.
+          </p>
+          <p class="feedback-name">Jaicy Rodriguez</p>
+          <p class="feedback-title">Jaicy Rodriguez</p>
+        </div>
+        <div class="feedback-box">
+          <p class="feedback-message">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi
+            facere ullam neque sit culpa eaque quibusdam voluptatem nisi.
+          </p>
+          <p class="feedback-name">Jaicy Rodriguez</p>
+          <p class="feedback-title">Jaicy Rodriguez</p>
+        </div>
+        <div class="feedback-box">
+          <p class="feedback-message">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi
+            facere ullam neque sit culpa eaque quibusdam voluptatem nisi.
+          </p>
+          <p class="feedback-name">Jaicy Rodriguez</p>
+          <p class="feedback-title">Jaicy Rodriguez</p>
+        </div>
+        <div class="feedback-box">
+          <p class="feedback-message">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi
+            facere ullam neque sit culpa eaque quibusdam voluptatem nisi.
+          </p>
+          <p class="feedback-name">Jaicy Rodriguez</p>
+          <p class="feedback-title">Jaicy Rodriguez</p>
+        </div>
+        <div class="feedback-box">
+          <p class="feedback-message">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi
+            facere ullam neque sit culpa eaque quibusdam voluptatem nisi.
+          </p>
+          <p class="feedback-name">Jaicy Rodriguez</p>
+          <p class="feedback-title">Jaicy Rodriguez</p>
         </div>
       </div>
     </section>
@@ -133,9 +198,10 @@
               >Send me an email</a
             >
           </div>
-          <img src="images/profilepic.jpg" alt="" />
+          <img src="images/profilepic2.png" alt="" />
         </div>
       </div>
     </section>
+    <p style="color: white; text-align: center">Created by Cherry Lyn Peret</p>
   </body>
 </html>
