--- a/index.html
+++ b/index.html
@@ -48,11 +48,9 @@
           <a href="https://www.facebook.com/cheriper" class="btn-cv"
             >Download CV</a
           >
-          <a href="https://www.facebook.com/cheriper" class="btn"
-            >Let's Talk!</a
-          >
+          <a href="#contact" class="btn">Let's Talk!</a>
         </div>
-        <div class="home-img">
+        <div class="home-img-container">
           <img src="images/peace2.png" alt="" class="home-img" />
         </div>
       </div>
@@ -110,8 +108,31 @@
               I am still looking for projects that i can post here. Lorem ipsum
               dolor sit amet consectetur adipisicing elit. Et cum natus amet.
               Corporis earum, aspernatur molestiae eaque voluptatem dolorum
-              recusandae nobis aliquid. Distinctio porro sed officia ab odio
-              vitae laboriosam?
+              recusandae nobis aliquid.
+            </p>
+            <a href="https://www.facebook.com/cheriper" class="btn-cv">Look</a>
+          </div>
+          <img src="images/portfolio1.png" alt="" />
+        </div>
+        <div class="portfolio-box">
+          <div class="portfolio-layer">
+            <h4>Coming Soon</h4>
+            <p>
+              I am still looking for projects that i can post here. Lorem ipsum
+              dolor sit amet consectetur adipisicing elit. Et cum natus amet.
+              Corporis earum, aspernatur.
+            </p>
+            <a href="https://www.facebook.com/cheriper" class="btn-cv">Look</a>
+          </div>
+          <img src="images/portfolio2.png" alt="" />
+        </div>
+        <div class="portfolio-box">
+          <div class="portfolio-layer">
+            <h4>Coming Soon</h4>
+            <p>
+              I am still looking for projects that i can post here. Lorem ipsum
+              dolor sit amet consectetur adipisicing elit. Et cum natus amet.
+              Corporis earum.
             </p>
             <a href="https://www.facebook.com/cheriper" class="btn-cv">Look</a>
           </div>
@@ -124,8 +145,7 @@
               I am still looking for projects that i can post here. Lorem ipsum
               dolor sit amet, consectetur adipisicing elit. Natus, alias.
               Officiis distinctio recusandae eligendi eaque? Laboriosam iste,
-              nemo quam reiciendis ducimus similique eveniet inventore ipsa
-              dicta maiores consequatur impedit! Eveniet.
+              nemo quam reiciendis ducimus similique.
             </p>
             <a href="https://www.facebook.com/cheriper" class="btn-look"
               >Look</a
@@ -193,15 +213,49 @@
         <div class="contact-box">
           <div class="contact-layer">
             <h4>Let's Talk!</h4>
-            <p>Let's collaborate and make things possible.</p>
-            <a href="https://www.facebook.com/cheriper" class="btn-contact"
-              >Send me an email</a
-            >
+            <div class="contact-socmed">
+              <div class="col1-socmed">
+                <a href="" target="_blank">
+                  <i class="bx bxs-phone"></i>
+                  <p>+(63)935-800-2697</p>
+                </a>
+                <a href="mailto:peretcherrylyn@gmail.com" target="_blank">
+                  <i class="bx bxl-telegram"></i>
+                  <p>peretcherrylyn@gmail.com</p>
+                </a>
+              </div>
+              <div class="col2-socmed">
+                <a
+                  href="https://www.instagram.com/cherrylynperet/"
+                  target="_blank"
+                >
+                  <i class="bx bxl-instagram-alt"></i>
+                  <p>/cherrylynperet</p></a
+                >
+                <a
+                  href="https://www.linkedin.com/in/cherry-lyn-peret-76a08b276/"
+                  target="_blank"
+                  ><i class="bx bxl-linkedin"></i>
+                  <p>/cherry-lyn-peret-76a08b276/</p>
+                </a>
+              </div>
+            </div>
+
+            <!-- <a href="https://www.facebook.com/cheriper" class="btn-contactcv"
+              ><i class="bx bx-download"></i> Download my resume</a
+            > -->
           </div>
-          <img src="images/profilepic2.png" alt="" />
+          <!-- <img src="images/profilepic2.png" alt="" /> -->
         </div>
       </div>
     </section>
-    <p style="color: white; text-align: center">Created by Cherry Lyn Peret</p>
+    <footer class="footer">
+      <div class="footer-text">
+        <p>&copy; 2023 by Jaicy Rodriguez</p>
+      </div>
+      <div class="footer-iconTop">
+        <a href="#home"><i class="bx bxs-arrow-to-top"></i></a>
+      </div>
+    </footer>
   </body>
 </html>
