--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </header>
       <div class="home-container">
         <div class="home-content">
-          <h3>Hello, I'm Cherry</h3>
+          <h3>Hello, I'm Cherry!</h3>
           <h1>An aspiring professional looking for opportunities.</h1>
           <p>
             Available and looking for
@@ -106,9 +106,7 @@
             <h4>Coming Soon</h4>
             <p>
               I am still looking for projects that i can post here. Lorem ipsum
-              dolor sit amet consectetur adipisicing elit. Et cum natus amet.
-              Corporis earum, aspernatur molestiae eaque voluptatem dolorum
-              recusandae nobis aliquid.
+              dolor sit amet consectetur adipisicing elit.
             </p>
             <a href="https://www.facebook.com/cheriper" class="btn-cv">Look</a>
           </div>
@@ -144,8 +142,7 @@
             <p>
               I am still looking for projects that i can post here. Lorem ipsum
               dolor sit amet, consectetur adipisicing elit. Natus, alias.
-              Officiis distinctio recusandae eligendi eaque? Laboriosam iste,
-              nemo quam reiciendis ducimus similique.
+              Officiis distinctio recusandae eligendi eaque?
             </p>
             <a href="https://www.facebook.com/cheriper" class="btn-look"
               >Look</a
@@ -160,51 +157,58 @@
       <div class="feedback-container">
         <div class="feedback-box">
           <p class="feedback-message">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi
-            facere ullam neque sit culpa eaque quibusdam voluptatem nisi.
+            <q
+              >Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Excepturi facere ullam neque sit culpa eaque quibusdam voluptatem
+              nisi.</q
+            >
           </p>
           <p class="feedback-name">Jaicy Rodriguez</p>
-          <p class="feedback-title">Jaicy Rodriguez</p>
+          <p class="feedback-title"><em>System Developer</em></p>
         </div>
         <div class="feedback-box">
           <p class="feedback-message">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi
-            facere ullam neque sit culpa eaque quibusdam voluptatem nisi.
+            <q
+              >Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Excepturi facere ullam neque sit culpa eaque quibusdam voluptatem
+              nisi.</q
+            >
           </p>
           <p class="feedback-name">Jaicy Rodriguez</p>
-          <p class="feedback-title">Jaicy Rodriguez</p>
+          <p class="feedback-title"><em>System Developer</em></p>
         </div>
         <div class="feedback-box">
           <p class="feedback-message">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi
-            facere ullam neque sit culpa eaque quibusdam voluptatem nisi.
+            <q
+              >Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Excepturi facere ullam neque sit culpa eaque quibusdam voluptatem
+              nisi.</q
+            >
           </p>
           <p class="feedback-name">Jaicy Rodriguez</p>
-          <p class="feedback-title">Jaicy Rodriguez</p>
+          <p class="feedback-title"><em>System Developer</em></p>
         </div>
         <div class="feedback-box">
           <p class="feedback-message">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi
-            facere ullam neque sit culpa eaque quibusdam voluptatem nisi.
+            <q
+              >Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Excepturi facere ullam neque sit culpa eaque quibusdam voluptatem
+              nisi.</q
+            >
           </p>
           <p class="feedback-name">Jaicy Rodriguez</p>
-          <p class="feedback-title">Jaicy Rodriguez</p>
+          <p class="feedback-title"><em>System Developer</em></p>
         </div>
         <div class="feedback-box">
           <p class="feedback-message">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi
-            facere ullam neque sit culpa eaque quibusdam voluptatem nisi.
+            <q
+              >Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Excepturi facere ullam neque sit culpa eaque quibusdam voluptatem
+              nisi.</q
+            >
           </p>
           <p class="feedback-name">Jaicy Rodriguez</p>
-          <p class="feedback-title">Jaicy Rodriguez</p>
-        </div>
-        <div class="feedback-box">
-          <p class="feedback-message">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi
-            facere ullam neque sit culpa eaque quibusdam voluptatem nisi.
-          </p>
-          <p class="feedback-name">Jaicy Rodriguez</p>
-          <p class="feedback-title">Jaicy Rodriguez</p>
+          <p class="feedback-title"><em>System Developer</em></p>
         </div>
       </div>
     </section>
@@ -245,7 +249,7 @@
               ><i class="bx bx-download"></i> Download my resume</a
             > -->
           </div>
-          <!-- <img src="images/profilepic2.png" alt="" /> -->
+          <img src="images/profilepic2.png" alt="" class="contact-img" />
         </div>
       </div>
     </section>
